unpackaged/main/default/objects/Staged_Sales_Order__c/Staged_Sales_Order__c.object-meta.xml
<CustomObject>
    <description>Used for Data migration / integration - stores inbound details for Staged Orders.</description>
    <label>Staged Sales Order</label>
    <nameField>
        <displayFormat>STGO-{000000}</displayFormat>
        <label>Staged Sales Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staged Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>