unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Ad_Server__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>As Server Used to to</description>
    <inlineHelpText>Salesforce ID of Ad Server</inlineHelpText>
    <label>Ad Server</label>
    <referenceTo>csdf__Ad_Server__c</referenceTo>
    <relationshipLabel>Staged Sales Orders</relationshipLabel>
    <relationshipName>Staged_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>