unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Ad_Server_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ad Server Sales Person</label>
    <referenceTo>csdf__User__c</referenceTo>
    <relationshipLabel>Staged Sales Orders</relationshipLabel>
    <relationshipName>Staged_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>