unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Ad_Server_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server_Time_Zone__c</fullName>
    <defaultValue>&#39;GMT&#39;</defaultValue>
    <description>Time zone such as GMT</description>
    <label>Ad Server Time Zone</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>