unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Ad_Server_Trafficker__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server_Trafficker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ad Server Trafficker</label>
    <referenceTo>csdf__User__c</referenceTo>
    <relationshipLabel>Staged Sales Orders (Ad Server Trafficker)</relationshipLabel>
    <relationshipName>Staged_Orders_Traffickers</relationshipName>
    <type>Lookup</type>
</CustomField>