unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Advertiser</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staged Sales Orders</relationshipLabel>
    <relationshipName>Staged_Sales_Orders_Advertisers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>