unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staged Sales Orders (Bill To Account)</relationshipLabel>
    <relationshipName>Staged_Sales_Orders_Bill_To</relationshipName>
    <type>Lookup</type>
</CustomField>