unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Billing Contact used for the order</description>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staged Sales Orders</relationshipLabel>
    <relationshipName>Staged_Sales_orders_Billing_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>