unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <label>Billing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>