unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Billing_Source__c.field-meta.xml
<CustomField>
    <fullName>Billing_Source__c</fullName>
    <label>Billing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracted</fullName>
            </value>
            <value>
                <fullName>DFP Actuals</fullName>
            </value>
            <value>
                <fullName>3rd Party Actuals</fullName>
                <default>true</default>
                <label>3rd Party Actuals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>