unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Booking_Contact__c.field-meta.xml
<CustomField>
    <fullName>Booking_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Booking Contact (Lookup)</description>
    <inlineHelpText>Booking Contact</inlineHelpText>
    <label>Booking Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staged Sales Orders (Booking Contact)</relationshipLabel>
    <relationshipName>Staged_Sales_Orders_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>