unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Budget_Source__c.field-meta.xml
<CustomField>
    <fullName>Budget_Source__c</fullName>
    <inlineHelpText>Budget Source</inlineHelpText>
    <label>Budget Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Upfront</fullName>
            </value>
            <value>
                <fullName>Digital Scatter</fullName>
            </value>
            <value>
                <fullName>Broadcast Upfront</fullName>
            </value>
            <value>
                <fullName>Broadcast Scatter</fullName>
            </value>
            <value>
                <fullName>Programmatic Guaranteed</fullName>
            </value>
            <value>
                <fullName>Programmatic Upfront</fullName>
            </value>
            <value>
                <fullName>Programmatic Scatter</fullName>
            </value>
            <value>
                <fullName>Ad Credit</fullName>
            </value>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>House - Growth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>