unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type__c</fullName>
    <label>Calculation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net</fullName>
            </value>
            <value>
                <fullName>Gross</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>