unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Company_On_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Company_On_Agreement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company On Agreement</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staged Sales Orders (Company On Agreement)</relationshipLabel>
    <relationshipName>Staged_Sales_Orders_Agreement_Company</relationshipName>
    <type>Lookup</type>
</CustomField>