unpackaged/main/default/objects/Staged_Sales_Order__c/fields/CONST_Approved__c.field-meta.xml
<CustomField>
    <fullName>CONST_Approved__c</fullName>
    <formula>&#39;Approved&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONST_Approved</label>
    <type>Text</type>
</CustomField>