unpackaged/main/default/objects/Staged_Sales_Order__c/fields/CONST_Blank__c.field-meta.xml
<CustomField>
    <fullName>CONST_Blank__c</fullName>
    <description>return blank</description>
    <formula>&quot;&quot;</formula>
    <inlineHelpText>return blank</inlineHelpText>
    <label>CONST Blank</label>
    <type>Text</type>
</CustomField>