unpackaged/main/default/objects/Staged_Sales_Order__c/fields/CONST_Today__c.field-meta.xml
<CustomField>
    <fullName>CONST_Today__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONST Today</label>
    <type>DateTime</type>
</CustomField>