unpackaged/main/default/objects/Staged_Sales_Order__c/fields/CONST_True__c.field-meta.xml
<CustomField>
    <fullName>CONST_True__c</fullName>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONST True</label>
    <type>Checkbox</type>
</CustomField>