unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Default_Invoice_Line_Layout__c.field-meta.xml
<CustomField>
    <fullName>Default_Invoice_Line_Layout__c</fullName>
    <formula>Opportunity__r.Account_Invoice_Line_Layout__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Invoice Line Layout</label>
    <type>Text</type>
</CustomField>