unpackaged/main/default/objects/Staged_Sales_Order__c/fields/DFP_Team__c.field-meta.xml
<CustomField>
    <fullName>DFP_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DFP Team</label>
    <referenceTo>CS_DFP_Team__c</referenceTo>
    <relationshipLabel>Staged Sales Orders</relationshipLabel>
    <relationshipName>Staged_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>