unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Expected_No_Lines__c.field-meta.xml
<CustomField>
    <fullName>Expected_No_Lines__c</fullName>
    <inlineHelpText>Expected number of Order Lines within this order (Control Totals)</inlineHelpText>
    <label>Expected No Lines</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>