unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Last_Date_Booked__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Booked__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Last Date/Time when SO was Booked</description>
    <inlineHelpText>Last Date/Time when SO was Booked</inlineHelpText>
    <label>Last Date Booked</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>