unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Market (Product Node)</description>
    <label>Market</label>
    <referenceTo>csmso__Product_Node__c</referenceTo>
    <relationshipLabel>Staged Sales Orders</relationshipLabel>
    <relationshipName>Staged_Sales_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>