unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Media_Agency__c.field-meta.xml
<CustomField>
    <fullName>Media_Agency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Media Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staged Sales Orders (Media Agency)</relationshipLabel>
    <relationshipName>Staged_Sales_Orders_Media_Agency</relationshipName>
    <type>Lookup</type>
</CustomField>