unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Media_Agency_Commission__c.field-meta.xml
<CustomField>
    <fullName>Media_Agency_Commission__c</fullName>
    <label>Media Agency Commission %</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>