unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Migrated_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Order_Id__c</fullName>
    <description>Order id of the migrated DFP order Id</description>
    <externalId>true</externalId>
    <inlineHelpText>Order id of the migrated DFP order Id</inlineHelpText>
    <label>Migrated Order Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>