unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Migrated_Proposal_Id__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Proposal_Id__c</fullName>
    <externalId>true</externalId>
    <label>Migrated Proposal Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>