unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Migrated_Source_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Source_Order_Id__c</fullName>
    <description>The DFP Id of the original order that has been duplicated / migrated</description>
    <inlineHelpText>The DFP Id of the original order that has been duplicated / migrated</inlineHelpText>
    <label>Migrated Source Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>