unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Minimum_Deal_Value__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Deal_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Minimum Deal Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>