unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Commercial</fullName>
            </value>
            <value>
                <fullName>House Guaranteed</fullName>
            </value>
            <value>
                <fullName>House Non-Guaranteed</fullName>
            </value>
            <value>
                <fullName>Labels AdCredit</fullName>
            </value>
            <value>
                <fullName>Labels Commercial</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>AdCredit</fullName>
                <isActive>false</isActive>
                <label>AdCredit</label>
            </value>
            <value>
                <fullName>Labels</fullName>
                <isActive>false</isActive>
                <label>Labels</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>