unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Paper_Type__c.field-meta.xml
<CustomField>
    <fullName>Paper_Type__c</fullName>
    <label>Paper Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spotify Paper</fullName>
            </value>
            <value>
                <fullName>Non-Spotify Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>