unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Spotify_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Spotify_Legal_Entity__c</fullName>
    <description>eg UNITED STATES (10 Chars max)</description>
    <inlineHelpText>eg UNITED STATES (10 Chars max)</inlineHelpText>
    <label>Spotify Legal Entity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>