unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Contains_Errors__c.field-meta.xml
<CustomField>
    <fullName>STG_Contains_Errors__c</fullName>
    <formula>STG_Total_Errors__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Contains Errors</label>
    <type>Checkbox</type>
</CustomField>