unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Count_of_Lines__c.field-meta.xml
<CustomField>
    <fullName>STG_Count_of_Lines__c</fullName>
    <description>Total number of imported Lines</description>
    <inlineHelpText>Total number of imported Lines</inlineHelpText>
    <label>STG Count of Lines</label>
    <summaryForeignKey>Staged_Sales_Order_Line__c.Staged_Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>