unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Has_All_Rows__c.field-meta.xml
<CustomField>
    <fullName>STG_Has_All_Rows__c</fullName>
    <formula>Expected_No_Lines__c ==  STG_Count_of_Lines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Has All Rows</label>
    <type>Checkbox</type>
</CustomField>