unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Imported_Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>STG_Imported_Fulfilment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Fulfilment record created as part of the import process.</inlineHelpText>
    <label>STG Imported Fulfilment</label>
    <referenceTo>csdf__Fulfilment__c</referenceTo>
    <relationshipLabel>Staged Sales Orders</relationshipLabel>
    <relationshipName>Staged_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>