unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Imported_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>STG_Imported_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Sales Order Created from the import / migration process</inlineHelpText>
    <label>STG Imported Sales Order</label>
    <referenceTo>csmso__Sales_Order__c</referenceTo>
    <relationshipLabel>Staged Sales Orders</relationshipLabel>
    <relationshipName>Staged_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>