unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>STG_Opportunity_Name__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Opportunity Name</label>
    <type>Text</type>
</CustomField>