unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>STG_Opportunity_Owner__c</fullName>
    <formula>CASESAFEID(Opportunity__r.OwnerId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Opportunity Owner</label>
    <type>Text</type>
</CustomField>