unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Primary_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>STG_Primary_Sales_Order__c</fullName>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STG Primary Sales Order</label>
    <type>Checkbox</type>
</CustomField>