unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Processed_Lines__c.field-meta.xml
<CustomField>
    <fullName>STG_Processed_Lines__c</fullName>
    <label>STG Processed Lines</label>
    <summaryFilterItems>
        <field>Staged_Sales_Order_Line__c.STG_Processed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Staged_Sales_Order_Line__c.Staged_Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>