unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Processing_Log__c.field-meta.xml
<CustomField>
    <fullName>STG_Processing_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to Log object used to process this record (populated internally)</inlineHelpText>
    <label>STG Processing Log</label>
    <referenceTo>Log__c</referenceTo>
    <relationshipLabel>Staged Sales Orders</relationshipLabel>
    <relationshipName>Staged_Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>