unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>STG_Processing_Status__c</fullName>
    <inlineHelpText>Create new records with status of New, then set to &#39;Ready To Process&#39; once all child lines have been inserted beneath this record. Only &#39;Ready To Process&#39; records will be selected for import.</inlineHelpText>
    <label>STG Processing Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Ready To Process</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Processed with Errors</fullName>
            </value>
            <value>
                <fullName>Order Header Created</fullName>
            </value>
            <value>
                <fullName>Rollback Required</fullName>
            </value>
            <value>
                <fullName>To Be Removed</fullName>
            </value>
            <value>
                <fullName>Ignore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>