unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Processing_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>STG_Processing_Sub_Status__c</fullName>
    <description>Detailed status of the Processing within the import batch</description>
    <inlineHelpText>Detailed status of the Processing within the import batch</inlineHelpText>
    <label>STG Processing Sub Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>