unpackaged/main/default/objects/Staged_Sales_Order__c/fields/STG_Total_Errors__c.field-meta.xml
<CustomField>
    <fullName>STG_Total_Errors__c</fullName>
    <description>Count of all the Lines with the Contains Error Flag set to true</description>
    <inlineHelpText>Count of all the Lines with the Contains Error Flag set to true</inlineHelpText>
    <label>STG Total Errors</label>
    <summaryFilterItems>
        <field>Staged_Sales_Order_Line__c.STG_Contains_Errors__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Staged_Sales_Order_Line__c.Staged_Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>