unpackaged/main/default/objects/Staged_Sales_Order__c/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <description>Terms &amp; Conditions</description>
    <inlineHelpText>Terms &amp; Conditions</inlineHelpText>
    <label>Terms and Conditions</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spotify</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>