unpackaged/main/default/objects/Staged_Sales_Order__c/validationRules/Can_be_Set_To_ready_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_be_Set_To_ready_2</fullName>
    <active>true</active>
    <description>Validate that the record can be set to Ready To Process</description>
    <errorConditionFormula>AND( 
	ISCHANGED( STG_Processing_Status__c ),
	ISPICKVAL(STG_Processing_Status__c, &#39;Ready To Process&#39;),
	OR (
		STG_Has_All_Rows__c == false , 
		!ISBLANK(STG_Imported_Sales_Order__c),
		!ISBLANK(STG_Processing_Log__c),
		ISBLANK(Advertiser__c),
		ISPICKVAL(Budget_Source__c,&#39;&#39;),
		ISPICKVAL(Calculation_Type__c,&#39;&#39;),
		ISBLANK(Last_Date_Booked__c),
		ISBLANK(Market__c),
		ISBLANK(Migrated_Order_Id__c),
		ISPICKVAL(Order_Type__c,&#39;&#39;),
		ISPICKVAL(Paper_Type__c,&#39;&#39;),
		ISBLANK(Status__c),
		ISBLANK(Ad_Server_Time_Zone__c),
		ISBLANK(Spotify_Legal_Entity__c)
	)
)</errorConditionFormula>
    <errorDisplayField>STG_Processing_Status__c</errorDisplayField>
    <errorMessage>Cannot be set to Ready To Process - Check Validation, and that the row has not already been imported.</errorMessage>
</ValidationRule>